--- a/style.css
+++ b/style.css
@@ -45,7 +45,7 @@ input {
     box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.25);
 }
 
-#button {
+#btn-salvar {
     margin-top: 20px;
     background-color: #094b47;
     color: #fff;
@@ -53,12 +53,35 @@ input {
     font-weight: 500;
     width: 150px;
     height: 40px;
+    padding: 0;
     cursor: pointer;
     transition: transform 0.2s ease-in-out;
 }
 
-#button:hover {
+#btn-pesquisar {
+    margin-top: 5px;
+    background-color: #094b47;
+    color: #fff;
+    text-align: center;
+    font-size: 1.2rem;
+    font-weight: 500;
+    width: 100px;
+    height: 30px;
+    padding: 0;
+    cursor: pointer;
+    transition: transform 0.2s ease-in-out;
+}
+
+#btn-salvar:hover,
+#btn-pesquisar:hover {
     transform: scale(1.05);
+}
+
+#busca {
+    text-align: right;
+    position: absolute;
+    top: 5%;
+    right: 2%;
 }
 
 
