--- a/style.css
+++ b/style.css
@@ -96,7 +96,7 @@ input {
     letter-spacing: 0.2rem;
 }
 
-#relatorio-anuncio {
+#relatorioAnuncio {
     position: absolute;
     top: 30%;
     right: 3%;
@@ -105,6 +105,7 @@ input {
     padding: 10px;
     border-radius: 10px;
     box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.25);
+    text-align: left;
 }
 
 
